openshift/kustomize/api/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: default
  annotations:
    description: Defines how to deploy api
  labels:
    name: api
    part-of: tno
    version: 1.0.0
    component: api
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    matchLabels:
      part-of: tno
      component: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: api
      labels:
        part-of: tno
        component: api
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: api-storage
        - name: ingest-storage
          persistentVolumeClaim:
            claimName: ingest-storage
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: api
          image: bcgov-c4awhwfpcremdbga.azurecr.io/api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: api-storage
              mountPath: /mnt/data
            - name: ingest-storage
              mountPath: /mnt/ingest
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
            limits:
              cpu: 200m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
