openshift/kustomize/api/base/deployConfig.yaml
---
# How the app will be deployed to the pod.
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: api
  namespace: default
  annotations:
    description: Defines how to deploy api
  labels:
    name: api
    part-of: tno
    version: 1.0.0
    component: api
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  test: false
  selector:
    part-of: tno
    component: api
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - api
        from:
          kind: ImageStreamTag
          namespace: 9b301c-tools
          name: api:dev
  template:
    metadata:
      name: api
      labels:
        part-of: tno
        component: api
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: api-storage
        - name: ingest-storage
          persistentVolumeClaim:
            claimName: ingest-storage
      containers:
        - name: api
          image: ""
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: api-storage
              mountPath: /mnt/data
            - name: ingest-storage
              mountPath: /mnt/ingest
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
