openshift/kustomize/api/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api
  namespace: default
  annotations:
    description: Deploy API
  labels:
    name: api
    part-of: tno
    version: 1.0.0
    component: api
    managed-by: kustomize
    created-by: jeremy.foster
    cluster: api-cluster
spec:
  serviceName: api
  replicas: 1
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
  selector:
    matchLabels:
      statefulset: api-cluster
  triggers:
    - type: ConfigChange
  template:
    metadata:
      labels:
        part-of: tno
        component: api
        statefulset: api-cluster
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: tno
      terminationGracePeriodSeconds: 0
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: statefulset
                    operator: In
                    values:
                      - api-cluster
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: api-storage
        - name: ingest-storage
          persistentVolumeClaim:
            claimName: ingest-storage
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: api
          image: bcgov-c4awhwfpcremdbga.azurecr.io/api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: api-storage
              mountPath: /mnt/data
            - name: ingest-storage
              mountPath: /mnt/ingest
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
